# Stable-Diffusion-VAE-Baker

./: .gitignore  Cargo.toml  Readme.md
projects/diffuser-edit/: Cargo.toml
projects/diffuser-edit/src/: lib.rs
projects/diffuser-edit/src/helpers/: mod.rs
projects/diffuser-edit/src/preprocessing/: mod.rs
projects/diffuser-edit/src/vae/: mod.rs
projects/diffuser-edit/tests/: main.rs
projects/diffuser-exif/: Cargo.toml
projects/diffuser-exif/src/: lib.rs
projects/diffuser-exif/src/helpers/: mod.rs
projects/diffuser-exif/tests/: main.rs
projects/vae-bake/: Cargo.toml
projects/vae-baker/: Cargo.toml
projects/vae-baker/src/: lib.rs
projects/vae-baker/src/baker/: mod.rs
