[package]
name = "diffuser-edit"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
candle-core = "0.5.1"
serde_json = "1.0.117"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
