[package]
name = "diffuser-edit"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "Edit diffuser models without GPU and Python"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/diffuser-edit"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
safetensors = "0.4.3"
candle-core = "0.6.0"
serde_json = "1.0.117"
tracing = "0.1.40"
image = { version = "0.25.1", features = ["jpeg", "webp", "avif"] }
walkdir = "2.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

