[package]
name = "diffuser-exif"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Edit diffuser models without GPU and Python"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
safetensors = "0.4.3"
candle-core = "0.6.0"
serde_json = "1.0.117"
tracing = "0.1.40"
image = { version = "0.25.1", features = ["jpeg", "webp", "avif"] }
walkdir = "2.5.0"
kamadak-exif = "0.5.5"
little_exif = "0.3.3"
img-parts = "0.3.0"
png = "0.17.13"
rayon = "1.10.0"
sha2 = "0.11.0-pre.3"

[dev-dependencies]
tracing-subscriber = "0.3.18"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

